--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<%= javascript_include_tag 'ckeditor/ckeditor.js' %>
 <html>
 <head>
   <title>Treebook</title>
@@ -47,5 +48,15 @@
 
 
 </div>
+<script type="text/javascript">
+  $(DOCUMENT).ready(function() {
+      if ($('textarea.ckeditor').length > 0) {
+          var data = $('textarea.ckeditor');
+          $.each(data, function(i) {
+              CKEDITOR.replace(data[i].id);
+          });
+      }
+  });
+</script>
 </body>
 </html>
