--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -15,7 +15,7 @@
  <div class="span7">
 
 		<strong><%=status.user.full_name%></strong>
-		<p><%=status.content%></p>
+		<p><%=raw status.content%></p>
 		<div class="meta">
 		<%= link_to time_ago_in_words(status.created_at)+ " ago" , status %> |
 		<%= link_to "show", status %>
