--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Content:</strong>
-  <%= @status.content %>
+  <%= raw @status.content %>
 </p>
 
 <%= link_to 'Edit', edit_status_path(@status) %> |
